tests/errors/syntax.UnterminatedString.1.res
══╡ Syntax Error ╞════════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Unable to parse input code

  Issue found when trying to parse:
      String
  
  Missing:
      closing curly bracket (`}`)

  ┃ File: tests/errors/syntax.UnterminatedString.1.art
  ┃ Line: 4
  ┃ 
  ┃    2 ║      done
  ┃    3 ║  }
  ┃    4 ║► this {
  ┃    5 ║  something else